--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
                     <li><a href="#">Contacto</a></li>
                     <li><a href="#">FAQ</a></li>
                 </ul>
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
-                <button id="btn-buscar">Buscar</button>                
+             
             </nav>
+                <button id="btn-buscar">Buscar</button>   
                 <section id="avatar-carrito">
                     <button id="btn-avatar"><img src="public/icons/avatar.png" alt=""></button>
                     <button id="btn-carrito"><svg xmlns="http://www.w3.org/2000/svg" fill="#d17f36" version="1.1" width="auto" height="40px" viewBox="0 0 164.9 196.4" preserveAspectRatio="xMinYMax meet" data-hook="svg-icon-9"><text x="84" y="131" dy=".35em" text-anchor="middle" class="puciUO f6TePH" data-hook="items-count" font-size="7em" >0</text><path d="M81.9 11.5c-18.8 0-34.1 16-34.1 35.7v18.1h7.8V47.2c0-15.4 11.8-27.9 26.4-27.9 14.5 0 26.4 12.5 26.4 27.9v18.1h6.6V64h1.1V47.2c-.1-19.7-15.4-35.7-34.2-35.7z"></path><path d="M156.9 70.5v118H8v-118h148.9m8-8H0v134h164.9v-134z"></path></svg></button>
@@ -49,13 +48,13 @@
             <img src="public/assets/main/section1/1.png" alt="">
             <img src="public/assets/main/section1/2.png" alt="">
             <h1>TU FUENTE DE RECURSOS DE CONSTRUCCION</h1>
-            <h2>Todo lo que necesitas en un sitio</h2>
+            <p>Todo lo que necesitas en un sitio</p>
             <button>COMPRAR AHORA</button>
             <img src="public/assets/puntos.png" alt="">
         </section>
 
         <section id="main-section-2">
-            <h3>LO MAS VENDIDO</h3>
+            <h2>LO MAS VENDIDO</h2>
             <article>
                 <img src="public/assets/main/section2/carrusel/1.png" alt="">
                 <span>Sierra Circular</span>
@@ -137,8 +136,8 @@
             </section>
 
             <section id="footer-section-2" class="footer-section">
-                <h3>SUSCRIBETE</h3>
-                <h4>Suscríbete al newsletter para obtener las últimas noticias y descuentos.</h4>
+                <h4>SUSCRIBETE</h4>
+                <h5>Suscríbete al newsletter para obtener las últimas noticias y descuentos.</h5>
                 <form action="" id="footer-newsletter-form">
                     <span>Nombre</span>
                     <input type="text">
@@ -148,7 +147,7 @@
             </section>
 
             <section id="footer-section-3" class="footer-section">
-                <h3>UBICACIÓN</h3>
+                <h4>UBICACIÓN</h4>
                 <span>Av. Julian Barbero Cañero, Kilerito, 29630, Benalmádena, España</span>
                 <span>952-111-111</span>
                 <span>info@constructis.com</span>
@@ -161,7 +160,7 @@
             </section>
 
             <section id="footer-section-4" class="footer-section">
-                <h3>MENU</h3>
+                <h4>MENU</h4>
                 <a href="#">Tienda</a>
                 <a href="#">Categorías</a>
                 <a href="#">Equipos</a>
