--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
         </section>
         <section class="seccion-header" id="header-seccion2">
-            <a href="/"><img id="logo-inicio" src="public/assets/logo.png" alt=""></a>
+            <a href="index.html"><img id="logo-inicio" src="public/assets/logo.png" alt=""></a>
             <nav id="barra-nav">
                 <ul id="nav-opciones">
                     <li><a href="#">Tienda</a></li>
@@ -33,7 +33,6 @@
                     <li><a href="#">Contacto</a></li>
                     <li><a href="#">FAQ</a></li>
                 </ul>
-             
             </nav>
                 <button id="btn-buscar">Buscar</button>   
                 <section id="avatar-carrito">
